force-app/main/default/objects/Account/fields/Both_of_Salary__c.field-meta.xml
<CustomField>
    <fullName>Both_of_Salary__c</fullName>
    <label>Both of Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>