force-app/main/default/objects/Account/fields/Create_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Create_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Invoice</label>
    <type>Checkbox</type>
</CustomField>