force-app/main/default/objects/Account/fields/Develper_Salary__c.field-meta.xml
<CustomField>
    <fullName>Develper_Salary__c</fullName>
    <label>Develper Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>