force-app/main/default/objects/Account/fields/Manager_Salary__c.field-meta.xml
<CustomField>
    <fullName>Manager_Salary__c</fullName>
    <label>Manager Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>