force-app/main/default/objects/Account/fields/Maximum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Amount__c</fullName>
    <label>Maximum Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>