force-app/main/default/objects/Account/fields/Minumun_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minumun_Amount__c</fullName>
    <label>Minumun Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>