force-app/main/default/objects/Account/fields/XFILES__Chatter_Google_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Chatter_Google_Folder_Id__c</fullName>
    <description>Chatter Google Folder Id</description>
    <inlineHelpText>Chatter Google Folder Id</inlineHelpText>
    <label>Chatter Google Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>