force-app/main/default/objects/Account/fields/XFILES__gFid__c.field-meta.xml
<CustomField>
    <fullName>XFILES__gFid__c</fullName>
    <inlineHelpText>Google folder Id</inlineHelpText>
    <label>Google Drive Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>