force-app/main/default/objects/Account/recordTypes/Bussines_Account.recordType-meta.xml
<RecordType>
    <fullName>Bussines_Account</fullName>
    <active>true</active>
    <label>Bussines Account</label>
</RecordType>