force-app/main/default/objects/Account/recordTypes/Diamond.recordType-meta.xml
<RecordType>
    <fullName>Diamond</fullName>
    <active>true</active>
    <label>Diamond</label>
</RecordType>