force-app/main/default/objects/Account/recordTypes/Gold.recordType-meta.xml
<RecordType>
    <fullName>Gold</fullName>
    <active>true</active>
    <label>Gold</label>
</RecordType>