force-app/main/default/objects/Account/recordTypes/Silver.recordType-meta.xml
<RecordType>
    <fullName>Silver</fullName>
    <active>true</active>
    <label>Silver</label>
</RecordType>